week-3/ec2.tf
resource "aws_instance" "ec2-instance" {
  ami             = var.ec2_ami
  instance_type   = var.ec2_instance_type
  key_name        = var.ec2_key_name
  security_groups = [
    aws_security_group.ssh-sg.name,
    aws_security_group.web-sg.name,
    aws_security_group.outbound-sg.name
  ]
  iam_instance_profile = aws_iam_instance_profile.ec2-profile.name
  user_data = <<-EOF
                #!/bin/bash
                aws s3 cp s3://${var.s3_bucket_name}/${var.dynamodb_script} /dynamodb-script.sh
                chmod +x /dynamodb-script.sh
                aws s3 cp s3://${var.s3_bucket_name}/${var.rds_script} /rds-script.sql
                yes | sudo amazon-linux-extras install postgresql12
              EOF 
}

resource "aws_security_group" "ssh-sg" {
  name = "ssh-sg"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "web-sg" {
  name = "web-sg"
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "outbound-sg" {
  name = "outbound-sg"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_iam_role" "ec2-role" {
  name = "ec2-role"

  assume_role_policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": "sts:AssumeRole",
      "Principal": {
        "Service": "ec2.amazonaws.com"
      },
      "Effect": "Allow",
      "Sid": ""
    }
  ]
}
EOF
}

resource "aws_iam_instance_profile" "ec2-profile" {
  name = "ec2-profile"
  role = aws_iam_role.ec2-role.name
}

resource "aws_iam_role_policy" "s3-fullaccess-policy" {
  name = "s3-fullaccess-policy"
  role = aws_iam_role.ec2-role.id

  policy = <<EOF
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Action": [
        "s3:*",
        "rds:*",
        "dynamodb:*"
      ],
      "Effect": "Allow",
      "Resource": "*"
    }
  ]
}
EOF
}

output "ec2_instance_public_ip" {
  value = aws_instance.ec2-instance.public_ip
}
